syntax = "proto3";

package controller.api.resource.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resource;resource";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Host contains all fields related to a Host resource.
message Host {
	// Output only.
	string uri = 1;
	google.protobuf.StringValue friendly_name = 2;

	// The time this host was created.
	// Output only.
	google.protobuf.Timestamp created_time = 3;
	// The time this host was last updated.
	// Output only.
	google.protobuf.Timestamp updated_time = 4;

	// Marks the host as disabled.  Default is false.
	google.protobuf.BoolValue disabled = 5;

	// This field is required.
	google.protobuf.StringValue address = 6;
}